# sbetr-resomv1

src/Applications/app_util/: ApplicationsFactory.F90  CMakeLists.txt
src/Applications/soil-farm/: CMakeLists.txt
src/Applications/soil-farm/resom/: CMakeLists.txt
src/Applications/soil-farm/resom/resom1layer/: BgcSummsDebType.F90  BgcSummsIndexType.F90  BgcSummsType.F90  BgcresomCompetType.F90  BgcresomDecompType.F90  BgcresomMath.F90  BgcresomNitDenType.F90  CMakeLists.txt  DebGrowMod.F90
src/Applications/soil-farm/resom/resom1layer/.ipynb_checkpoints/: BgcSummsSOMType-checkpoint.F90
src/Applications/soil-farm/resom/resomNlayer/: BgcReactionsSummsType.F90  CMakeLists.txt  PlantSoilBgcresomType.F90
src/Applications/soil-farm/resom/resomPara/: CMakeLists.txt  SummsParaType.F90
src/driver/elm/: BeTRSimulationELM.F90
src/driver/main/: HistBGCMod.F90  sbetrDriverMod.F90
src/driver/shared/: BeTRSimulation.F90
src/driver/standalone/: BeTRSimulationStandalone.F90
src/jarmodel/driver/: CMakeLists.txt  JarModelFactory.F90
src/jarmodel/forcing/: CMakeLists.txt  SetJarForcMod.F90
src/jarmodel/test/readpara/: CMakeLists.txt  readparatest.F90
